--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,6 +8,16 @@ linters-settings:
   funlen:
     lines: 150
     statements: 80
+  depguard:
+    main:
+      allow:
+        - $gostd
+        - github.com/google/uuid
+        - github.com/stretchr/testify/require
+        - github.com/jackc/pgx
+        - github.com/go-yaml/yaml
+
+
 
 issues:
   exclude-rules:
